--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
 
         <!-- Card Cat -->
         <article class="product-card bg-white rounded-xl shadow-md p-6 flex flex-col items-center animate-fade-in-up"
-                 onclick="window.location.href='cat.html'" 
+                 onclick="window.location.href='CAT.html'" 
                  role="button" tabindex="0" 
                  aria-label="Ver relojes Cat">
           <div class="mb-5 rounded-lg overflow-hidden">
