--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
     "@type": "JewelryStore",
     "name": "Relojería ZH",
     "description": "Venta y reparación de relojes y joyería fina en San Felipe",
-    "image": "https://tusitio.cl/img/logo-pro.png",
-    "url": "https://tusitio.cl/",
+    "image": "https://relojeriazh.cl/img/logo-pro.png",
+    "url": "https://relojeriazh.cl/",
     "telephone": "+56-9-7749-0064",
     "address": {
       "@type": "PostalAddress",
@@ -276,7 +276,7 @@
 
         <!-- Card Cat -->
         <article class="product-card bg-white rounded-xl shadow-md p-6 flex flex-col items-center animate-fade-in-up"
-                 onclick="window.location.href='cat.html'" 
+                 onclick="window.location.href='CAT.html'" 
                  role="button" tabindex="0" 
                  aria-label="Ver relojes Cat">
           <div class="mb-5 rounded-lg overflow-hidden">
@@ -385,36 +385,36 @@
                   <span>1. Relojes</span>
                 </li>
                 <li class="flex items-start">
-                  <i class="bi bi-check-circle-fill text-green-500 text-xl mr-3 mt-1"></i>
-                  <span>1.1 Mantención</span>
+                  <i class=" text-xl mr-3 mt-1"></i>
+                  <span> Mantención</span>
                 </li>
                 <li class="flex items-start">
-                  <i class="bi bi-check-circle-fill text-green-500 text-xl mr-3 mt-1"></i>
-                  <span>1.2 Cristales</span>
+                  <i class=" text-xl mr-3 mt-1"></i>
+                  <span>Cristales</span>
                 </li>
                 <li class="flex items-start">
-                  <i class="bi bi-check-circle-fill text-green-500 text-xl mr-3 mt-1"></i>
-                  <span>1.3 Pilas</span>
+                  <i class="text-xl mr-3 mt-1"></i>
+                  <span>Pilas</span>
                 </li>
                 <li class="flex items-start">
-                  <i class="bi bi-check-circle-fill text-green-500 text-xl mr-3 mt-1"></i>
-                  <span>1.4 correas</span>
+                  <i class="text-xl mr-3 mt-1"></i>
+                  <span>correas</span>
                 </li>
                               <li class="flex items-start">
                   <i class="bi bi-check-circle-fill text-green-500 text-xl mr-3 mt-1"></i>
                   <span>2. ⁠Joyas</span>
                 </li>
                                 <li class="flex items-start">
-                  <i class="bi bi-check-circle-fill text-green-500 text-xl mr-3 mt-1"></i>
-                  <span>2.1 Soldaduras</span>
+                  <i class=" text-xl mr-3 mt-1"></i>
+                  <span> Soldaduras</span>
+                </li>
+                                <li class="flex items-start">
+                  <i class="text-xl mr-3 mt-1"></i>
+                  <span>Hechuras</span>
                 </li>
                                 <li class="flex items-start">
                   <i class="bi bi-check-circle-fill text-green-500 text-xl mr-3 mt-1"></i>
-                  <span>2.2 Hechuras</span>
-                </li>
-                                <li class="flex items-start">
-                  <i class="bi bi-check-circle-fill text-green-500 text-xl mr-3 mt-1"></i>
-                  <span>2.3 Otros</span>
+                  <span>3 Otros</span>
                 </li>
               </ul>
               
@@ -592,7 +592,7 @@
                 <i class="bi bi-award text-2xl text-gold-600"></i>
               </div>
               <h3 class="font-semibold mb-2">Calidad</h3>
-              <p class="text-sm text-gray-600">Todos nuestros productos cuentan con garantía oficial y certificación de autenticidad.</p>
+              <p class="text-sm text-gray-600">Nuestros productos y servicios cuentan con garantía.</p>
             </div>
             <div class="text-center">
               <div class="bg-purple-100 w-16 h-16 rounded-full flex items-center justify-center mx-auto mb-4">
