--- a/nosotros.html
+++ b/nosotros.html
@@ -374,7 +374,7 @@
               <i class="bi bi-heart text-2xl text-purple-600"></i>
             </div>
             <h3 class="text-xl font-semibold mb-3">Tradición</h3>
-            <p class="text-gray-600">Mantenemos vivas las técnicas artesanales transmitidas por tres generaciones de relojeros y joyeros.</p>
+            <p class="text-gray-600">Mantenemos viva nuestra tradición  relojera.</p>
           </div>
           
           <div class="value-card bg-gray-50 rounded-xl p-6 text-center">
