coomit final mix 2.5

--- a/nosotros.html
+++ b/nosotros.html
@@ -280,7 +280,7 @@
             </div>
           </div>
           <div class="bg-white rounded-2xl shadow-lg overflow-hidden">
-            <img src="img/carrusel1.jpg" 
+            <img src="img/sobrenosotroszhrelojeria.jpg" 
                  alt="Taller de relojería tradicional" 
                  class="w-full h-80 object-cover" />
           </div>
