--- a/index.html
+++ b/index.html
@@ -7,15 +7,15 @@
   <title>Relojería ZH | Relojes de Lujo y Joyería Fina en San Felipe</title>
   <meta name="description" content="Relojería ZH en San Felipe: Catálogo exclusivo de relojes Casio, Seiko, G-Shock y joyería fina. Reparación profesional y venta de accesorios.">
   <meta name="keywords" content="relojes, joyería, San Felipe, relojería, Casio, Seiko, G-Shock, reparación relojes, joyas, anillos, collares">
-  <link rel="canonical" href="https://tusitio.cl/" />
+  <link rel="canonical" href="https://relojeriajoyeriazh.cl/" />
   <link rel="icon" type="image/png" href="img/logo-pro.png" />
 
   <!-- Open Graph MEJORADO -->
   <meta property="og:type" content="website" />
   <meta property="og:title" content="Relojería ZH | Relojes de Lujo y Joyería Fina" />
   <meta property="og:description" content="Descubre nuestra colección exclusiva de relojes y joyería fina en San Felipe. Las mejores marcas con garantía oficial." />
-  <meta property="og:image" content="https://tusitio.cl/img/og-image.jpg" />
-  <meta property="og:url" content="https://tusitio.cl/" />
+  <meta property="og:image" content="https://relojeriajoyeriazh.cl/img/og-image.jpg" />
+  <meta property="og:url" content="https://relojeriajoyeriazh.cl/" />
   <meta property="og:site_name" content="Relojería ZH" />
 <link rel="icon" type="image/png" href="img/logo zhpro.jpg" />
   <!-- JSON-LD: Negocio local MEJORADO -->
