--- a/anillos.html
+++ b/anillos.html
@@ -592,9 +592,9 @@
         <div>
           <h3 class="text-lg font-semibold text-amber-800 mb-4">Contacto</h3>
           <ul class="space-y-2">
-            <li class="flex items-center text-gray-600"><i class="bi bi-geo-alt mr-2 text-amber-600"></i> Av. Principal 123, Santiago</li>
-            <li class="flex items-center text-gray-600"><i class="bi bi-telephone mr-2 text-amber-600"></i> +56 9 1234 5678</li>
-            <li class="flex items-center text-gray-600"><i class="bi bi-envelope mr-2 text-amber-600"></i> info@relojeriazh.cl</li>
+            <li class="flex items-center text-gray-600"><i class="bi bi-geo-alt mr-2 text-amber-600"></i> San Felipe, Valparaíso, Chile</li>
+            <li class="flex items-center text-gray-600"><i class="bi bi-telephone mr-2 text-amber-600"></i> +56 9 7749 0064</li>
+            <li class="flex items-center text-gray-600"><i class="bi bi-envelope mr-2 text-amber-600"></i> rzunigagallardo@gmail.com</li>
             <li class="flex items-center text-gray-600"><i class="bi bi-clock mr-2 text-amber-600"></i> Lunes a Sábado: 9:00 - 20:00</li>
           </ul>
         </div>
