--- a/collares.html
+++ b/collares.html
@@ -592,9 +592,7 @@
   <footer class="border-t border-gray-200 bg-white py-8 mt-12">
     <div class="max-w-7xl mx-auto px-4 text-center text-sm text-gray-500">
       <div class="flex justify-center space-x-6 mb-4">
-        <a href="#" class="text-gray-600 hover:text-yellow-500 transition-colors"><i class="bi bi-facebook text-xl"></i></a>
-        <a href="#" class="text-gray-600 hover:text-yellow-500 transition-colors"><i class="bi bi-instagram text-xl"></i></a>
-        <a href="#" class="text-gray-600 hover:text-yellow-500 transition-colors"><i class="bi bi-tiktok text-xl"></i></a>
+        <a href="https://www.instagram.com/relojerias.zh/" class="text-gray-600 hover:text-yellow-500 transition-colors"><i class="bi bi-instagram text-xl"></i></a>
       </div>
       © 2025 Relojería ZH — Catálogo informativo. Todos los derechos reservados.
     </div>
