--- a/index.html
+++ b/index.html
@@ -629,7 +629,7 @@
           <p class="text-gray-400 mb-4">Tu destino para relojes y joyería fina en San Felipe.</p>
           <div class="flex gap-4">
             <a href="#" aria-label="Facebook" class="text-gray-400 hover:text-gold-400 transition"><i class="bi bi-facephone text-xl"></i></a>
-            <a href="#" aria-label="Instagram" class="text-gray-400 hover:text-gold-400 transition"><i class="bi bi-instagram text-xl"></i></a>
+            <a href="https://www.instagram.com/relojerias.zh/" aria-label="Instagram" class="text-gray-400 hover:text-gold-400 transition"><i class="bi bi-instagram text-xl"></i></a>
             <a href="https://wa.me/56977490064" aria-label="WhatsApp" class="text-gray-400 hover:text-gold-400 transition"><i class="bi bi-whatsapp text-xl"></i></a>
           </div>
         </div>
