--- a/nosotros.html
+++ b/nosotros.html
@@ -419,8 +419,7 @@
           </a>
           <p class="text-gray-400 mb-4">Tradición familiar en relojería y joyería desde los años 60.</p>
           <div class="flex gap-4">
-            <a href="#" aria-label="Facebook" class="text-gray-400 hover:text-gold-400 transition"><i class="bi bi-facebook text-xl"></i></a>
-            <a href="#" aria-label="Instagram" class="text-gray-400 hover:text-gold-400 transition"><i class="bi bi-instagram text-xl"></i></a>
+            <a href="https://www.instagram.com/relojerias.zh/" aria-label="Instagram" class="text-gray-400 hover:text-gold-400 transition"><i class="bi bi-instagram text-xl"></i></a>
             <a href="#" aria-label="WhatsApp" class="text-gray-400 hover:text-gold-400 transition"><i class="bi bi-whatsapp text-xl"></i></a>
           </div>
         </div>
@@ -448,7 +447,7 @@
             </li>
             <li class="flex items-start">
               <i class="bi bi-telephone text-gold-400 mr-2 mt-1"></i> 
-              <span>+56 9 1234 5678</span>
+              <span>+56 9 7749 0064</span>
             </li>
           </ul>
         </div>
